--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div id="monster">
-        <div id="char">
+        <div id="nameMonster">
           <div class="lifebar">
             <div class="bar" style="width: 10%"></div>
           </div>
@@ -37,6 +37,7 @@
     </div>
 
     <ul class="log"></ul>
+    <script src="./js/classes.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
