concertando bug do nome.

--- a/Index.html
+++ b/Index.html
@@ -21,14 +21,13 @@
         </div>
       </div>
       <div id="monster">
-        <div id="nameMonster">
           <div class="lifebar">
             <div class="bar" style="width: 10%"></div>
           </div>
-          <strong class="name">--</strong>
+          <strong class="nameMonster">--</strong>
           <div class="imageChar">
             <img style="height: 300px;" src="./assets/images/duendeVerde.jfif" alt="hero">
-        </div>
+            </div>
           <div>
             <button class="atackButton">Atacar</button>
           </div>
